# Solan-Copy-Trading-Bot-Rust

./: .env  Cargo.toml  README.md  main.rs
